Transferred from the Adobe Open Source Subversion Repository
Revision: 4462
Author:   gosmith@adobe.com
Date:     2009-01-09T02:23:52.112680Z

Log Message: 
-----------
"ant clean" now deletes some new stuff that has been added to the AIR Integration Kit:

frameworks/AIR SDK Readme.txt
frameworks/projects/air

QE Notes: None
Doc Notes: None
Bugs: None
Reviewer: None

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247524 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -72,14 +72,15 @@
 	</target>
 
 	<target name="clean" description="Cleans all SWCs and their resource bundles">
-		<!-- Delete AIR files from 'prepare' target -->
-		<delete file="${FLEX_HOME}/SDK license.pdf"/> <!-- from AIR Integration Kit -->
+		<!-- Delete AIR files and directories from 'prepare' target -->
+		<delete file="${FLEX_HOME}/AIR SDK Readme.txt"/>
+		<delete file="${FLEX_HOME}/SDK license.pdf"/>
 		<delete file="${FLEX_HOME}/bin/adl"/>
 		<delete file="${FLEX_HOME}/bin/adl.exe"/>
 		<delete file="${FLEX_HOME}/bin/adt"/>
 		<delete file="${FLEX_HOME}/bin/adt.bat"/>
-		<delete file="${FLEX_HOME}/frameworks/libs/air/airglobal.swc"/>
-		<delete file="${FLEX_HOME}/frameworks/libs/air/servicemonitor.swc"/>
+		<delete dir="${FLEX_HOME}/frameworks/libs/air"/>
+		<delete dir="${FLEX_HOME}/frameworks/projects/air"/>
 		<delete file="${FLEX_HOME}/lib/adt.jar"/>
 		<delete dir="${FLEX_HOME}/runtimes"/>
 		<delete dir="${FLEX_HOME}/samples/badge"/>
@@ -101,7 +102,6 @@
 		<!-- Delete generated FABridge files -->
 		<ant dir="${basedir}/javascript" target="clean"/>
 		<!-- Delete empty folders -->
-		<delete dir="${basedir}/libs/air"/>
 		<delete dir="${basedir}/locale"/>
 		<delete dir="${basedir}/themes/haloclassic"/>
 		<delete dir="${basedir}/themes/Wireframe"/>
