Transferred from the Adobe Open Source Subversion Repository
Revision: 4655
Author:   gosmith@adobe.com
Date:     2009-01-24T01:28:05.282830Z

Log Message: 
-----------
Moved the new UITLFTextField class (which makes it possible to use TLF in Halo components) from framework.swc to a new SWC, framework_textLayout.swc.

The reason for this involves how RSLs work. Its presence in the framework RSL meant that, even if a Halo app didn't use UITLFTextField, the TLF RSLs had to be loaded first in order to avoid VerifyErrors. Since we don't want to load TLF for Halo apps that don't use it, we had to segregate UITLFTextField from the Halo framework.

QE Notes: None
Doc Notes: None
Bugs: None
Reviewer: Glenn

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/FrameworkTextLayoutClasses.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/core/Version.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/build.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/framework/src/mx/core/UITLFTextField.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/core/UITLFTextField.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/FrameworkClasses.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/proj

--- a/build.xml
+++ b/build.xml
@@ -17,10 +17,11 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
+		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
 		<ant dir="${basedir}/projects/flex4" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
@@ -41,6 +42,10 @@
 
     <target name="framework" description="Clean build of framework.swc and its resource bundles">
 		<ant dir="${basedir}/projects/framework"/>
+    </target>
+
+    <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
+		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 
     <target name="haloclassic" description="Clean build of haloclassic.swc">
@@ -89,6 +94,7 @@
 		<delete dir="${FLEX_HOME}/templates/air"/>
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
+		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
