Transferred from the Adobe Open Source Subversion Repository
Revision: 4862
Author:   jimurphy@adobe.com
Date:     2009-02-05T18:51:23.376518Z

Log Message: 
-----------
Merge i10 revisions 4827,4834,4837,4845,4859-4860 -> trunk

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/as3/genext/GenerativeClassInfo.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/asc/src/java/macromedia/asc/semantics/FlowAnalyzer.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/as3/genext/GenerativeSecondPassEvaluator.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/as3/binding/BindableFirstPassEvaluator.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/as3/managed/ManagedProperty.vm</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/webtier/j2ee/servlet/src/java/flex/webtier/server/j2ee/html/ErrorRenderer.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/webtier/j2ee/servlet/src/java/flex/webtier/util/RendererUtil.java</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/libs/textLayout_edit.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/mxml/builder/DocumentBuilder.java</path>
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/webapps/webtier/build.xml</path>
<path kind="dir" action="M">/flex/sdk/trunk</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/binding/BindingManager.as</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/mxml/lang/StandardDefs.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/webtier/j2ee/servlet/src/java/flex/webtier/util/index.templat

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -148,5 +148,20 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/airframework" target="other.locales"/>
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 	</target>
+
+    <target name="updateAIR" description="Rebuild a AIK SWC and SWF that depend on Flex" >
+		<property name="flex.home" value="${FLEX_HOME}" />     
+		
+		<delete dir="${basedir}/projects/air/build" quiet="true" />
+		<ant dir="${basedir}/projects/air" antfile="sample-frameworks-build.xml" target="application_updater.application_updater_ui" />
+		<copy todir="${basedir}/libs/air">
+			<fileset dir="${basedir}/projects/air/build/results">
+				<include name="applicationupdater_ui.swc"/>
+				<include name="applicationupdater_ui.swf"/>
+			</fileset>
+		</copy>
+		<delete dir="${basedir}/projects/air/build" quiet="true" />
+    </target>
+
 
 </project>
