--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -17,17 +17,19 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
 		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
 		<ant dir="${basedir}/projects/flex4" target="doc" />
+		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 		<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/haloclassic" target="doc" />
+		<ant dir="${basedir}/projects/halo" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 	</target>
@@ -48,12 +50,20 @@
 		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 
+    <target name="halo" description="Clean build of halo.swc">
+		<ant dir="${basedir}/projects/halo"/>
+    </target>
+
     <target name="haloclassic" description="Clean build of haloclassic.swc">
 		<ant dir="${basedir}/projects/haloclassic"/>
     </target>
 
      <target name="flex4" description="Clean build of flex4.swc">
 		<ant dir="${basedir}/projects/flex4"/>
+    </target>
+
+     <target name="sparkskins" description="Clean build of sparkskins.swc">
+		<ant dir="${basedir}/projects/sparkskins"/>
     </target>
 
     <target name="wireframe" description="Clean build of wireframe.swc">
@@ -98,8 +108,10 @@
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
+		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
+		<ant dir="${basedir}/projects/halo" target="clean"/>
 		<ant dir="${basedir}/projects/wireframe" target="clean"/>
 		<ant dir="${basedir}/projects/flash-integration" target="clean"/>
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
@@ -138,7 +150,9 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/flex" target="compile"/>
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
 		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
+		<ant dir="${basedir}/projects/halo" target="compile"/>
 		<ant dir="${basedir}/projects/flex4" target="compile"/>
+		<ant dir="${basedir}/projects/sparkskins" target="compile"/>
 		<ant dir="${basedir}/projects/wireframe" target="compile"/>
 
     </target>
