Transferred from the Adobe Open Source Subversion Repository
Revision: 5092
Author:   gruehle@adobe.com
Date:     2009-02-26T20:31:11.499539Z

Log Message: 
-----------
Spark skins for Halo components. WARNING: The appearance of ALL applications is affected by this checkin. If you want to go back to the old skins, there is a new Halo theme (in frameworks/themes/Halo) that can be used to go back to the Flex 3 appearance.

This checkin introduces a new swc - sparkskins.swc. This swc contains the spark skins for the Halo components. (these skins depend on FXG, which means they cannot live in frameworks.swc).

This checkin also introduces a new theme - Halo. This is the Flex 3 theme, packaged for easy consumption.

Known issues:
* DMV and AIR components are not reskinned yet 
* Editable ComboBox skin is not final (left edge of button is wrong) 
* PopUpButton/PopUpMenuButton does not differentiate over/down from popUpOver/popUpDown. 
* Indeterminate progress bar is not final 
* ComboBox/Menu drop shadows are incorrect (missing, actually...) 
* Spark styles are mostly functional, but not entirely. 
* Metadata for spark styles has not been added to the Halo components yet
* Focus drawing is off for many components
* Setting compatibilityVersion to 3.0.0 is not yet correctly loading the Halo skins (using 2.0.1 works)


There are some slight differences in appearance between some Halo and Gumbo components:
* Scroll thumb minimum size is smaller in Halo 
* Height of text input is slightly different  
* Slider data tips look different (this may be changing...)
* When using the halo theme and changing themeColor, you must also set rollOverColor and selectionColor


This checkin also fixes many bugs related to text styles in Gumbo components:
SDK-19476 - ID selectors don't match ids that are for a TextBox in a spark skins
SDK-18533 - color style doesn't work when set on FxList
SDK-18455 - Setting 'color' on a global selector does not affect Spark components
SDK-18343 - Spark com

--- a/build.xml
+++ b/build.xml
@@ -17,17 +17,19 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
 		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
 		<ant dir="${basedir}/projects/flex4" target="doc" />
+		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 		<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/haloclassic" target="doc" />
+		<ant dir="${basedir}/projects/halo" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 	</target>
@@ -48,12 +50,20 @@
 		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 
+    <target name="halo" description="Clean build of halo.swc">
+		<ant dir="${basedir}/projects/halo"/>
+    </target>
+
     <target name="haloclassic" description="Clean build of haloclassic.swc">
 		<ant dir="${basedir}/projects/haloclassic"/>
     </target>
 
      <target name="flex4" description="Clean build of flex4.swc">
 		<ant dir="${basedir}/projects/flex4"/>
+    </target>
+
+     <target name="sparkskins" description="Clean build of sparkskins.swc">
+		<ant dir="${basedir}/projects/sparkskins"/>
     </target>
 
     <target name="wireframe" description="Clean build of wireframe.swc">
@@ -98,8 +108,10 @@
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
+		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
+		<ant dir="${basedir}/projects/halo" target="clean"/>
 		<ant dir="${basedir}/projects/wireframe" target="clean"/>
 		<ant dir="${basedir}/projects/flash-integration" target="clean"/>
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
@@ -138,7 +150,9 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/flex" target="compile"/>
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
 		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
+		<ant dir="${basedir}/projects/halo" target="compile"/>
 		<ant dir="${basedir}/projects/flex4" target="compile"/>
+		<ant dir="${basedir}/projects/sparkskins" target="compile"/>
 		<ant dir="${basedir}/projects/wireframe" target="compile"/>
 
     </target>
