--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -44,10 +44,6 @@
 
     <target name="framework" description="Clean build of framework.swc and its resource bundles">
 		<ant dir="${basedir}/projects/framework"/>
-    </target>
-
-    <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
-		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 
     <target name="halo" description="Clean build of halo.swc">
@@ -104,7 +100,6 @@
 		<delete dir="${FLEX_HOME}/templates/air"/>
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
-		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
