Transferred from the Adobe Open Source Subversion Repository
Revision: 5272
Author:   jimurphy@adobe.com
Date:     2009-03-12T20:08:41.306700Z

Log Message: 
-----------
Bugs: sdk-19825, sdk-19824
-integrated TLF build 391.  
-Removed textLayout_conversion.swc,textLayout_core.swc, textLayout_edit.swc and textLayout_textField.swc.  These have been replaced with textLayout.swc
-created new "in" directory tlf.  This is where I will integrate the TLF rsls.  These are now being pre-built for us
-Removed call to build TLF.swc in frameworks/build.xml
-Removed references to the removed TLF swc's in flex4/build.xml and wireframe/build.xml

Bugs: sdk-15437 , sdk-19821
-updated the packaged frameworks/build.xml to rebuild: flex4,wireframe,sparkskins and halo
-fixed the airframework target so the frameworks/build.xml does not error out

qa: yes. check that when rebuilding the swc's in the framework that they are built correctly
checkintests: pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_core.swc</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_textField.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/libs/textLayout.swc</path>
<path kind="file" action="A">/flex/sdk/trunk/in/tlf/textLayout_391.swf</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build_framework.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_conversion.swc</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_edit.swc</path>
<path kind="dir" action="A">/flex/sdk/trunk/in/tlf</path>
<path kind="file" action="A">/flex/sdk/

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,flex4,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -44,10 +44,6 @@
 
     <target name="framework" description="Clean build of framework.swc and its resource bundles">
 		<ant dir="${basedir}/projects/framework"/>
-    </target>
-
-    <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
-		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 
     <target name="halo" description="Clean build of halo.swc">
@@ -104,7 +100,6 @@
 		<delete dir="${FLEX_HOME}/templates/air"/>
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
-		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
