Transferred from the Adobe Open Source Subversion Repository
Revision: 5747
Author:   jimurphy@adobe.com
Date:     2009-03-30T15:46:03.030846Z

Log Message: 
-----------
-The manifests for framework and flex4 will now be maintained from the frameworks/halo-manifest.xml and frameworks/spark-manifest.xml instead of maintaining duplicate copies.
-edited halo-manifest.xml: 
  -added back the flash.filters classes 
  -added lookupOnly="true" for classes that refer to other swcs
-removed mxml-2009-manifest.xml
-mxml-manifest.xml is removed from SVN but is now copied (during the build) from halo-manifest.xml and will still remain in the frameworks directory just not under src.
-renamed the airframework manifest files to be more air specific
-removed bundles.properties as they should not be checked in because they are created during the build.xml
-update flex/flex4/.project to have the spark-manifest link to point at frameworks/spark-manifest.xml

qa: yes. there may be an issue using the flash.filters when using multiple namespaces
doc: no
tests: checkintests pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/flex-config.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/halo/bundles.properties</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/sparkskins/bundles.properties</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/airframework/.actionScriptProperties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/air-config.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/airframework/spark-air-manifest.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/mxml-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/

--- a/build.xml
+++ b/build.xml
@@ -123,7 +123,7 @@
 		<delete dir="${basedir}/locale"/>
 	</target>
 
-	<target name="prepare" description="Prepares for building framework SWCs">
+	<target name="prepare" depends="ide_setup" description="Prepares for building framework SWCs">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
@@ -143,6 +143,12 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<!-- FIXME: For now, copy local override of build-sample-framework.xml -->
 		<copy file="${FLEX_HOME}/in/air/sample-frameworks-build.xml" todir="${FLEX_HOME}/frameworks/projects/air" overwrite="true" />
 	</target>
+	
+	<target name="ide_setup" description="Copies manifests to project directories so the IDE can find them">
+		<copy file="spark-manifest.xml" tofile="projects/flex4/manifest.xml" overwrite="true"/>
+		<copy file="halo-manifest.xml" tofile="projects/framework/manifest.xml" overwrite="true"/>
+		<copy file="halo-manifest.xml" tofile="${basedir}/mxml-manifest.xml" overwrite="true"/>
+	</target>
 
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/framework" target="compile"/>
@@ -160,7 +166,6 @@ tar -xjf "AIR Integration Kit.tbz2" .
 	<target name="other.locales" description ="Builds resource SWCs for other locales">
 		<ant dir="${basedir}/projects/framework" target="other.locales"/>
 		<ant dir="${basedir}/projects/airframework" target="other.locales"/>
-		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 	</target>
 
     <target name="updateAIR" description="Rebuild a AIK SWC and SWF that depend on Flex" >
