--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -123,7 +123,7 @@
 		<delete dir="${basedir}/locale"/>
 	</target>
 
-	<target name="prepare" depends="ide_setup" description="Prepares for building framework SWCs">
+	<target name="prepare" description="Prepares for building framework SWCs">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
@@ -144,11 +144,6 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<copy file="${FLEX_HOME}/in/air/sample-frameworks-build.xml" todir="${FLEX_HOME}/frameworks/projects/air" overwrite="true" />
 	</target>
 	
-	<target name="ide_setup" description="Copies manifests to project directories so the IDE can find them">
-		<copy file="spark-manifest.xml" tofile="projects/flex4/manifest.xml" overwrite="true"/>
-		<copy file="halo-manifest.xml" tofile="projects/framework/manifest.xml" overwrite="true"/>
-	</target>
-
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
