Transferred from the Adobe Open Source Subversion Repository
Revision: 6076
Author:   jimurphy@adobe.com
Date:     2009-04-09T15:17:03.743326Z

Log Message: 
-----------
removed the ide setup target I put into frameworks/build.xml that copies the spark and halo manifests to the flex4 and framework directories.  A prepare target now exists in each of these directories and also added to the clean target to get rid of the manifest file.

qa: no
doc: no
checkintests: pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247534 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -123,7 +123,7 @@
 		<delete dir="${basedir}/locale"/>
 	</target>
 
-	<target name="prepare" depends="ide_setup" description="Prepares for building framework SWCs">
+	<target name="prepare" description="Prepares for building framework SWCs">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
@@ -144,11 +144,6 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<copy file="${FLEX_HOME}/in/air/sample-frameworks-build.xml" todir="${FLEX_HOME}/frameworks/projects/air" overwrite="true" />
 	</target>
 	
-	<target name="ide_setup" description="Copies manifests to project directories so the IDE can find them">
-		<copy file="spark-manifest.xml" tofile="projects/flex4/manifest.xml" overwrite="true"/>
-		<copy file="halo-manifest.xml" tofile="projects/framework/manifest.xml" overwrite="true"/>
-	</target>
-
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
