Transferred from the Adobe Open Source Subversion Repository
Revision: 7787
Author:   jimurphy@adobe.com
Date:     2009-06-12T16:24:18.835090Z

Log Message: 
-----------
this should not have been checked in.  This will fix the build.xml

bugs: no
qa: no
checkintests: pass

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247536 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -129,7 +129,7 @@
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
 tar -xjf "AIR Integration Kit.tbz2" .
 		</echo>
-		<exec executable="C:/cygwin/bin/sh" dir="${FLEX_HOME}">
+		<exec executable="sh" dir="${FLEX_HOME}">
 			<arg line="${FLEX_HOME}/air_unzip.sh"/>
 		</exec>
 		<delete file="${FLEX_HOME}/air_unzip.sh"/>
