--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
 		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
-		<ant dir="${basedir}/projects/flex4" target="doc" />
+		<ant dir="${basedir}/projects/spark" target="doc" />
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
@@ -59,7 +59,7 @@
     </target>
 
      <target name="spark" description="Clean build of spark.swc">
-		<ant dir="${basedir}/projects/flex4"/>
+		<ant dir="${basedir}/projects/spark"/>
     </target>
 
      <target name="sparkskins" description="Clean build of sparkskins.swc">
@@ -107,7 +107,7 @@
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
-		<ant dir="${basedir}/projects/flex4" target="clean"/>
+		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
@@ -151,7 +151,7 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
 		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
 		<ant dir="${basedir}/projects/halo" target="compile"/>
-		<ant dir="${basedir}/projects/flex4" target="compile"/>
+		<ant dir="${basedir}/projects/spark" target="compile"/>
 		<ant dir="${basedir}/projects/sparkskins" target="compile"/>
 		<ant dir="${basedir}/projects/wireframe" target="compile"/>
 
