Transferred from the Adobe Open Source Subversion Repository
Revision: 8690
Author:   jimurphy@adobe.com
Date:     2009-07-20T19:32:14.163111Z

Log Message: 
-----------
Remove all of haloclassic since it is not supported any longer

bugs:http://bugs.adobe.com/jira/browse/SDK-20729
qa: no
checkintests: pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/projects/haloclassic</path>
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/themes/HaloClassic</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247539 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,haloclassic,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,framework_textLayout,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -28,7 +28,6 @@
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 		<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
-		<ant dir="${basedir}/projects/haloclassic" target="doc" />
 		<ant dir="${basedir}/projects/halo" target="doc" />
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
@@ -54,11 +53,7 @@
 		<ant dir="${basedir}/projects/halo"/>
     </target>
 
-    <target name="haloclassic" description="Clean build of haloclassic.swc">
-		<ant dir="${basedir}/projects/haloclassic"/>
-    </target>
-
-     <target name="spark" description="Clean build of spark.swc">
+    <target name="spark" description="Clean build of spark.swc">
 		<ant dir="${basedir}/projects/spark"/>
     </target>
 
@@ -110,7 +105,6 @@
 		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
-		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
 		<ant dir="${basedir}/projects/halo" target="clean"/>
 		<ant dir="${basedir}/projects/wireframe" target="clean"/>
 		<ant dir="${basedir}/projects/flash-integration" target="clean"/>
@@ -149,7 +143,6 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
 		<ant dir="${basedir}/projects/flex" target="compile"/>
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
-		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
 		<ant dir="${basedir}/projects/halo" target="compile"/>
 		<ant dir="${basedir}/projects/spark" target="compile"/>
 		<ant dir="${basedir}/projects/sparkskins" target="compile"/>
