Transferred from the Adobe Open Source Subversion Repository
Revision: 9721
Author:   cframpto@adobe.com
Date:     2009-08-27T22:24:41.483201Z

Log Message: 
-----------
framework_textLayout.swc is history.  The class are now in spark.swc but still in mx.controls and mx.core.  These classes allow TLF text to be used with halo components.  Because of dependencies there is no need to have a separate swc anymore.

QE notes: 
Doc notes: 
Bugs: 
Reviewer: Gordon
Tests run: checkintests
Is noteworthy for integration: yes

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/flex-config.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/controls/dataGridClasses/TLFDataGridItemRenderer.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/controls/dataGridClasses/TLFDataGridItemRenderer.as" copyfrom-rev="9718" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/mx/controls/dataGridClasses/TLFDataGridItemRenderer.as</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/core/Version.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/mx/controls/dataGridClasses</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/core/UITLFTextField.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/framework_textLayout/src/mx/core/UITLFTextField.as" copyfrom-rev="9718" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/mx/core/UITLFTextField.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/spark/src/mx/core</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/air-config.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247541 13f79535-47bb-0310-995

--- a/build.xml
+++ b/build.xml
@@ -17,11 +17,10 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,tlf,framework,framework_textLayout,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,tlf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
-		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
 		<ant dir="${basedir}/projects/spark" target="doc" />
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
@@ -46,10 +45,6 @@
 		<ant dir="${basedir}/projects/framework"/>
     </target>
 
-	 <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
-		<ant dir="${basedir}/projects/framework_textLayout"/>
-    </target>
-	
     <target name="halo" description="Clean build of halo.swc">
 		<ant dir="${basedir}/projects/halo"/>
     </target>
@@ -105,7 +100,6 @@
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
-		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
