--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -17,11 +17,10 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,tlf,framework,framework_textLayout,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,tlf,framework,spark,sparkskins,rpc,airframework,flex,flash_integration,utilities,halo,wireframe,updateAIR" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
-		<ant dir="${basedir}/projects/framework_textLayout" target="doc" />
 		<ant dir="${basedir}/projects/spark" target="doc" />
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
@@ -46,10 +45,6 @@
 		<ant dir="${basedir}/projects/framework"/>
     </target>
 
-	 <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
-		<ant dir="${basedir}/projects/framework_textLayout"/>
-    </target>
-	
     <target name="halo" description="Clean build of halo.swc">
 		<ant dir="${basedir}/projects/halo"/>
     </target>
@@ -105,7 +100,6 @@
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
-		<ant dir="${basedir}/projects/framework_textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/textLayout" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
